Fixing image nav on narrow viewports.

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -303,7 +303,6 @@ figure img {
     max-height: 768px;
     height: 75%;
     width: auto;
-    max-width: auto;
 }
 
 figcaption {
@@ -332,6 +331,17 @@ figure div {
     width: calc(100% - 6em);
 }
  
+@media screen and ( max-width: 37.49em ) {
+
+    figure:target { padding: 3em 1.5em; }
+    figure div { width: calc(100% - 3em); }
+
+    figure img {
+        max-width: 75%;
+        height: auto;
+    }
+}
+
 
 /**
  * ------------------------------------------------------------- 
